# relay-hub

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: 02-pretty_bug_report.yaml  03-feature_request.md  04-pretty_feature_request.yaml  bug_report.md
.github/workflows/: auto-format.yaml  rust-ci.yaml
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/: connection.rs  lib.rs  transfer.rs
plugins/: README.md
